--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>metrodrone</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style=" padding: 0; margin: 0;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
